--- a/src/index.css
+++ b/src/index.css
@@ -253,7 +253,6 @@ ul {
   margin-top: 1rem;
 }
 /* ============= PROJECT CSS =============== */
-
 .container {
   padding: 2rem;
   display: grid;
@@ -264,30 +263,35 @@ ul {
 .color-form {
   display: flex;
 }
-input[type='text'] {
-  border-color: transparent;
-  padding: 0.5rem 1rem;
-  font-size: 1.25rem;
-  max-width: 200px;
-}
+
 input[type='color'] {
   height: 100%;
-  background-color: var(--white);
+  background: var(--white);
   border-color: var(--white);
 }
-.container .btn {
-  border-radius: 0;
-  border-top-right-radius: var(--borderRadius);
-  border-bottom-right-radius: var(--borderRadius);
-  letter-spacing: 3px;
-  transition-duration: 0s;
+
+input[type='text'] {
+  padding: 0.5rem 1rem;
+  border-color: transparent;
+  background: var(--white);
+  max-width: 200px;
+  font-size: 1.25rem;
 }
+
+.container .btn {
+  transition-duration: 0s;
+  letter-spacing: 3px;
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
+}
+
 @media screen and (min-width: 768px) {
   .container {
     grid-template-columns: auto 1fr;
     column-gap: 2rem;
     align-items: center;
   }
+
   .color-form {
     height: 40px;
   }
@@ -296,22 +300,24 @@ input[type='color'] {
 .colors {
   min-height: calc(100vh - 160px);
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(223.33px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(233.33px, 1fr));
   grid-template-rows: repeat(auto-fit, minmax(96px, 1fr));
 }
+
 .color {
   padding: 1rem 2rem;
   cursor: pointer;
-  font-size: 1rem;
 }
+
 .color p {
   line-height: 1.5;
   margin-bottom: 0.25rem;
 }
 
-.color-light .color-value {
+.color-light .percent-value {
   color: var(--white);
 }
-.color-light .percent-value {
+
+.color-light .color-value {
   color: var(--white);
 }
